# FlexiGift

./: README.md
Guides/: FRONTEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  PRD.md  PROJECT_STRUCTURE.md  SETUP.md  STYLUS_GUIDE.md
contracts/: .env.example  .gitignore  Cargo.toml  README.md  deploy.ps1  deploy.sh
contracts/src/: lib.rs  tests.rs
frontend/: App.tsx  config.ts  index.html  metadata.json  package-lock.json  package.json
frontend/components/: AssetAtlasSection.tsx  ContactSection.tsx  CreateGiftCardModal.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  NavigationPill.tsx  ParticlesBackground.tsx  ProductDemo.tsx  ServicesSection.tsx  SolutionsSection.tsx  WalletConnect.tsx
frontend/hooks/: useWallet.ts
frontend/pages/: CreatePage.tsx  LandingPage.tsx  RedeemPage.tsx
frontend/utils/: contract.ts
